--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -15,9 +15,11 @@
             <div class="nav-title"></div>
             <div class="icon-list">
                 <ul>
-                    <li><a href="https://www.cnblogs.com/poloyy/" target="_self">首页</a></li>
-                    <li><a href="https://msg.cnblogs.com/send/poloyy" target="_blank">联系</a></li>
+                    <li><a href="https://www.cnblogs.com/icaihua/" target="_self">首页</a></li>
+                    <li><a href="https://msg.cnblogs.com/send/icaihua" target="_blank">联系</a></li>
+                    <li><a href="https://www.cnblogs.com/icaihua/rss" target="_blank">订阅</a></li>
                     <li><a href="https://i.cnblogs.com/" target="_blank">管理</a></li>
+                    <li><a href="https://github.com/Zhou-Hepeng" target="_blank">GitHub</a></li>
                     <li><a href="https://www.cnblogs.com/" target="_blank">CNBlogs</a></li>
                 </ul>
             </div>
@@ -92,16 +94,16 @@
     window.cnblogsConfig = {
 
         // ---- 基础信息配置 ----
-        blogUser      : "小菠萝测试笔记", // 博主名称
-        blogAvatar    : "https://files.cnblogs.com/files/poloyy/touxianga.bmp", // 用户头像URL
-        blogStartDate : "2019-12-17", // 入园时间，年-月-日，入园时间查看方法：鼠标停留园龄时间上，会显示入园时间
+        blogUser      : "菜花君°", // 博主名称
+        blogAvatar    : "https://files.cnblogs.com/files/icaihua/Zhou-Hepeng.gif", // 用户头像URL
+        blogStartDate : "2016-11-17", // 入园时间，年-月-日，入园时间查看方法：鼠标停留园龄时间上，会显示入园时间
 
         // ---- 网站配置 ----
-        webpageTitleOnblur        : "(◍´꒳`◍) Hi, 小可爱", // 当前页失去焦点，页面title显示文字
+        webpageTitleOnblur        : "(◍´꒳`◍) Hi, 菜花", // 当前页失去焦点，页面title显示文字
         webpageTitleOnblurTimeOut : 500, // 当前页失去焦点，页面title变化，延时时间，单位毫秒
         webpageTitleFocus         : "(*´∇｀*) 欢迎回来！", // 当前页获取焦点，页面title显示文字，显示后延时恢复原title
         webpageTitleFocusTimeOut  : 1000, // 当前页获取焦点，页面title变化，延时时间，单位毫秒
-        webpageIcon : "https://files.cnblogs.com/files/poloyy/touxianga.bmp", // 网站图标
+        webpageIcon : "https://files.cnblogs.com/files/icaihua/blog_logo.gif", // 网站图标
 
         // ---- 进度条配置 ----
         progressBar: {
@@ -192,14 +194,14 @@
         // ---- 页脚配置 ----
         bottomBlogroll: [ // 友情链接，[[链接名,链接]....]
             ["侯大宝", 'https://www.cnblogs.com/houdabao/'],
-            ["申请坑位", 'https://msg.cnblogs.com/send/poloyy'],
-            ["申请坑位", 'https://msg.cnblogs.com/send/poloyy'],
-            ["申请坑位", 'https://msg.cnblogs.com/send/poloyy'],
-            ["申请坑位", 'https://msg.cnblogs.com/send/poloyy'],
+            ["申请坑位", 'https://msg.cnblogs.com/send/icaihua'],
+            ["申请坑位", 'https://msg.cnblogs.com/send/icaihua'],
+            ["申请坑位", 'https://msg.cnblogs.com/send/icaihua'],
+            ["申请坑位", 'https://msg.cnblogs.com/send/icaihua'],
         ],
         bottomText: {  // 页脚标语
-            left : "好好学习", // 图标左侧文字
-            right: "天天向下"  // 图标右侧文字
+            left : "事实并非理所当然", // 图标左侧文字
+            right: "世界总是欲盖弥彰"  // 图标右侧文字
         }
 
     };
@@ -211,7 +213,7 @@
      */
     var staticFileSetting = {
         source   : 'github',
-        versions : '2c2babda659b3fdb1a3ce60c7b07aaef46811230', // 版本号
+        versions : '3f3a10aadf27c5eb7f065d83a9c7ccb1e3aaef05', // 版本号
     };
 
     // start cache
